--- a/index.html
+++ b/index.html
@@ -329,6 +329,14 @@
       .cta-box{flex-direction:column; align-items:flex-start}
     }
   </style>
+
+  <!-- Favicons -->
+  <link rel="icon" href="favicon.ico" sizes="any">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="manifest" href="site.webmanifest">
+
 </head>
 
 <body>
@@ -463,8 +471,52 @@
       </div>
     </section>
 
+    <!-- SOBRE NÓS -->
+    <section id="sobre">
+      <div class="container">
+        <div class="section-title">
+          <h2>Sobre Nós</h2>
+          <p>Consultoria e serviços em Tecnologia da Informação</p>
+          <div class="divider"></div>
+        </div>
+
+        <div class="cta-box" style="align-items:flex-start">
+          <div style="max-width: 820px">
+            <p style="margin-top:0">
+              A <strong>Sync IT</strong> é uma empresa de consultoria e serviços em <strong>Tecnologia da Informação</strong>, focada em ajudar empresas a terem uma TI mais <strong>estável</strong>, <strong>segura</strong> e <strong>produtiva</strong>, com atendimento em toda a região <strong>Norte</strong> e <strong>Vale do Itajaí (SC)</strong>.
+            </p>
+
+            <p>
+              Atuamos como parceiro estratégico do seu negócio: entendemos o cenário atual, fazemos um diagnóstico completo e montamos um plano de ação personalizado para evoluir sua infraestrutura e reduzir falhas, custos e riscos. Nosso trabalho é garantir que sua tecnologia funcione “em sincronia” com os seus objetivos — do dia a dia do suporte até projetos mais robustos.
+            </p>
+
+            <p style="margin-bottom:10px; font-weight:800; color:var(--navy)">Principais soluções da Sync IT:</p>
+            <ul style="margin:0 0 12px 18px; color:var(--muted); font-weight:700">
+              <li>Infraestrutura de TI (servidores, redes, Wi‑Fi corporativo, equipamentos e padronização)</li>
+              <li>Suporte técnico e manutenção (preventiva e corretiva, presencial e remoto)</li>
+              <li>Gestão de TI terceirizada (rotinas, monitoramento, melhorias contínuas e documentação)</li>
+              <li>Cibersegurança (boas práticas, antivírus corporativo, firewall, políticas e controles)</li>
+              <li>Microsoft 365 (implantação, migração, contas, e‑mail, segurança e produtividade)</li>
+              <li>Backup e continuidade (backup em nuvem, rotinas de testes e recuperação)</li>
+              <li>Projetos e melhorias (expansão de rede, reorganização de ambiente, upgrades e otimizações)</li>
+            </ul>
+
+            <p style="margin-bottom:0">
+              Se você quer mais tranquilidade e uma TI que realmente ajude sua empresa a crescer, fale com a <strong>Sync IT</strong> e descubra a melhor solução para o seu cenário.
+            </p>
+          </div>
+
+          <div style="display:flex; flex-direction:column; gap:12px; min-width: 240px">
+<a class="btn" href="#servicos">Ver Serviços</a>
+            <a class="btn" href="#diferenciais">Ver Diferenciais</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
     <!-- SOBRE -->
-    <section id="sobre" class="band">
+    <section id="diferenciais" class="band">
       <div class="container">
         <div class="section-title">
           <h2 style="color:#fff">Por Que Escolher a Sync IT?</h2>
@@ -552,7 +604,7 @@
       document.getElementById("btnCtaWhats").href = wa;
 
       document.getElementById("btnEmail").href = `mailto:${window.SYNCIT.email}`;
-    </script>
+</script>
   </footer>
 </body>
 </html>
