--- a/sobre.html
+++ b/sobre.html
@@ -150,6 +150,16 @@
 }
 </style>
 
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17834083730"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'AW-17834083730');
+</script>
+
 </head>
 <body>
   <script>
