--- a/index.html
+++ b/index.html
@@ -337,6 +337,16 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="manifest" href="site.webmanifest">
 
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17834083730"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'AW-17834083730');
+</script>
+
 </head>
 
 <body>
@@ -529,10 +539,6 @@
             <p class="small" style="margin-top:10px">
               WhatsApp: <strong>(47) 99107-0975</strong>
             </p>
-	    <p class="small" style="margin-top:10px">
-              Email: <strong>contato@synit.com.br</strong>
-            </p>
-
           </div>
 
           <div style="display:flex; gap:12px; flex-wrap:wrap">
